Devise、Carrierware、Bootstrap インストール

--- a/elites-messenger-repo/Gemfile
+++ b/elites-messenger-repo/Gemfile
@@ -45,3 +45,9 @@ group :development do
   gem 'spring'
 end
 
+# Devise
+gem 'devise'
+# Carrierwave
+gem 'carrierwave'
+# Bootstrap
+gem 'twitter-bootstrap-rails'
